@@ -1,3 +1,13 @@
+2005-06-01  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Rules-quot: New file, from gettext-0.14.4.
+	* boldquot.sed: New file, from gettext-0.14.4.
+	* en@boldquot.header: New file, from gettext-0.14.4.
+	* en@quot.header: New file, from gettext-0.14.4.
+	* insert-header.sin: New file, from gettext-0.14.4.
+	* quot.sed: New file, from gettext-0.14.4.
+	* remove-potcdate.sin: New file, from gettext-0.14.4.
+
 2005-05-31  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Makefile.in.in: Upgrade to gettext-0.14.4.
