@@ -1,3 +1,8 @@
+2005-06-01  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.am (ACLOCAL_AMFLAGS): New variable.
+	(EXTRA_DIST): Add config.rpath, mkinstalldirs, m4/ChangeLog.
+
 2005-05-21  Leslie Polzer <leslie.polzer@gmx.net>
 	* src/globals.h: deactivated GNOME-i18n, it seems to be broken
 	* autogen.sh: removed '-1.6' suffix from tools
